--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "homebridge-cmdswitch2",
   "version": "0.1.0",
-  "description": "CMD plugin for HomeBridge: https://github.com/nfarina/homebridge",
+  "description": "CMD plugin for HomeBridge (API 2.0): https://github.com/nfarina/homebridge",
   "repository": {
     "type": "git",
     "url": "git://github.com/luisiam/homebridge-cmdswitch2.git"
