--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "homebridge-cmdswitch2",
-  "version": "0.1.8",
+  "version": "0.1.9",
   "description": "CMD plugin for HomeBridge (API 2.0): https://github.com/nfarina/homebridge",
   "repository": {
     "type": "git",
@@ -18,5 +18,8 @@
   "engines": {
     "node": ">=0.12.0",
     "homebridge": ">=0.3.0"
+  },
+  "dependencies": {
+    "chalk": "^1.1.3"
   }
 }
